--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Oscar</title>
 </head>
-<body style="height: 100vh;background: darkred url(https://mir-s3-cdn-cf.behance.net/project_modules/disp/3679ce16166391.562a643b6cea1.png) no-repeat center center;">
+<body style="height: 100vh;background: darkred url()">
 
 oscar
 This is stuff you can borrow from me:
@@ -11,8 +11,31 @@ This is stuff you can borrow from me:
 Bouncy ball
 Toy car
 Little shoes that are too small for me
-Clothes that are too small for me
+Clothes that are too small for me.
+My favourite character is Captain Booberang
+Can you see that picture of BB-8? He's my favourite character. He's the first one in the Star Wars. He's from The Force Awakens.
+Kids. Can you see that Batman logo? It's sooo cool. 
 
+<div style="display: inline-block;">
+  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/3679ce16166391.562a643b6cea1.png" />
+  <br>Batman
+</div>
+
+<div style="display: inline-block;">
+  <img src="images/bb8.jpg" />
+  <br>BB8
+</div>
+
+<div style="display: inline-block;">
+  <br>Those persons right there are in my family. \/ See those kids down there? Those are my kids. Just kidding. Those are that person who has a black shirt and a white dot in the middle's kids. That person with the black shirt and the white dot in the middle he's about thirty four.  
+
+  <img src="images/graham-bros.jpg" />
+</div>
+
+<br>
+<br>
+<br>
+The End
 
 </body>
 </html>
