--- a/index.html
+++ b/index.html
@@ -2,8 +2,34 @@
 <html>
 <head>
   <title>Oscar</title>
+
+  <style type="text/css">
+    html,body {
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      font-size: 100px;
+      margin: 0;
+    }
+  </style>
 </head>
 <body style="height: 100vh;background: darkred url()">
+
+<div style="color: white; width: 100%; display: block; min-height: 500px; background: #092d49;">
+  <h1>This is oscars website</h1>
+  <h3>Working is fun</h3>
+  <h3>All you have to do is work really hard, and then you will get the hang of it</h3>
+
+  <ul>
+    <li>Checklist</li>
+    <li>Close check</li>
+    <li>Sandbox Ex</li>
+    <li>Check computer - we're using it</li>
+  </ul>
+  <img src="images/working.jpg" />
+&nbsp;
+  </div>
 
 oscar
 This is stuff you can borrow from me:
@@ -15,6 +41,7 @@ Clothes that are too small for me.
 My favourite character is Captain Booberang
 Can you see that picture of BB-8? He's my favourite character. He's the first one in the Star Wars. He's from The Force Awakens.
 Kids. Can you see that Batman logo? It's sooo cool. 
+
 
 <div style="display: inline-block;">
   <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/3679ce16166391.562a643b6cea1.png" />
@@ -31,6 +58,25 @@ Kids. Can you see that Batman logo? It's sooo cool.
 
   <img src="images/graham-bros.jpg" />
 </div>
+
+
+<table>
+  <tr>
+
+  <td>
+    <h2>I will destroy you!!!!!!!!!!</h2>
+    <img src="images/superman.jpg" />
+  </td>
+
+  <td>
+    <h2>No you won't Superman!</h2><p>This is told by Oscar and Dad</p>
+    <img src="images/batman2.jpg"
+  </td>
+</tr>
+</table>
+
+<br>
+
 
 <br>
 <br>
