--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 </head>
 <body style="height: 100vh;background: darkred url()">
 
+<div class="" style="min-height: 600px;display: block;background: black;color: red;">
+
+<h3 style="margin: 0;text-align: center;">City</h3>
+<img src="images/city.jpg" />
+
+<h3 style="margin:0;">We're going pretty high on this website. What if a jack in the box jumped up and scared you? That's being a scaredy cat</h3>
+<img src="images/superman-logo.jpg" />
+<h3>This is the superman logo. Can you see that lava there?</h3>
+
+</div>
 <div style="color: white; width: 100%; display: block; min-height: 500px; background: #092d49;">
   <h1>This is oscars website</h1>
   <h3>Working is fun</h3>
