--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ Kids. Can you see that Batman logo? It's sooo cool.
 
 
 <div style="display: inline-block;">
+  <img src="images/robotman.gif" />
+  <br>
+</div>
+
+<div style="display: inline-block;">
   <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/3679ce16166391.562a643b6cea1.png" />
   <br>Batman
 </div>
@@ -85,13 +90,32 @@ Kids. Can you see that Batman logo? It's sooo cool.
 </tr>
 </table>
 
+<div style="background: #f95922; display: block; width: 100%; min-height: 1000px;position: relative;">
+  <h1>Of all these times, it's me, Oscar, making this website > </h1>
+  <br><br><br>
+  <img src="images/orange.jpg" style="width: 300px;height: auto;display: block;margin: 0 auto;" />
+  <br><br><br><br>
+  <h1>Orange and orange are the same words, but except, there's the orange that you eat and the orange color. I used the orange background for my website.</h1>
+
+</div>
+
+<div style="display: none;">
+This website is for my dads website building company but he said he saw too many websites and they all looked the same so he said I could make whatever I wanted for his business as long as I said one thing, his email is jamie@verticalgraindesign.com and you can email him there if you want to. 
+</div>
+
+<div style="width: 100%; min-height: 1000px; background: lightblue;">
+<h1>BB8 is my favourite character from the force awakens and I'm gonna show you a video of BB8 and here's what BB8 looks like. Good Luck. This is a video of BB8 and R2D2. </h1>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IW5WsLUu77o" frameborder="0" allowfullscreen></iframe>
+</div>
+
+
 <br>
 
 
 <br>
 <br>
 <br>
-The End
+
 
 </body>
 </html>
