--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@ This website is for my dads website building company but he said he saw too many
 <div style="width: 100%; min-height: 1000px; background: lightblue;">
 <h1>BB8 is my favourite character from the force awakens and I'm gonna show you a video of BB8 and here's what BB8 looks like. Good Luck. This is a video of BB8 and R2D2. </h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IW5WsLUu77o" frameborder="0" allowfullscreen></iframe>
+
+<h1>The end</h1>
 </div>
 
 
@@ -115,6 +117,35 @@ This website is for my dads website building company but he said he saw too many
 <br>
 <br>
 <br>
+<div class="" style="height:100vh;background: #f54040">
+<h2>The story of death</h2>
+<h4>There ewas once a boy named spider man. He was extremely dangerous. He followed darkness becauase the evil guy zapped him with evil. Then, he was doomed to death. And that's why suddenly from the ashes Donatello and an astronaut rose. They defeated them all. The end.</h4>
+</div>
+
+<div class="" style="height:100vh;background: skyblue">
+  <h4>If a  giant attacks hawaii, there might be a chance a super hero will rise from the ashes. But, he will be an alien and not nice, but he will always treat you like a baby. He'll think you are a dangerous person forever and ever. But, just remember your true form is always with you.</h4>
+  <img src="images/giant.jpg" />
+</div>
+<div class="" style="height:100vh;background: black">
+   <img src="images/lego.jpg" />
+   <h1 style="color: white;">Lego is fun for me.</h1>
+</div>
+
+<div style="height:100vh; background-color: orange">
+  <h3>Superman and Batman are battling again with their armour suits.</h3>
+  <img src="images/supermanandbatman.jpg" style="width: 100%; max-width: 50%; height: auto;" />
+</div>
+
+<div style="height: 100vh; background-color: darkred; ">
+<h3>If you ever find a crystal, what will you expect?</h3>
+<img src="images/crystal.jpg" />
+</div>
+
+
+<div style="background-color: white; height: 100vh;">
+  <h1>I like my robot.</h1>
+  <img src="images/robot.jpg" style="max-width: 500px; height: auto;" />
+</div>
 
 
 </body>
