We made some updates

--- a/index.html
+++ b/index.html
@@ -146,6 +146,26 @@ This website is for my dads website building company but he said he saw too many
   <h1>I like my robot.</h1>
   <img src="images/robot.jpg" style="max-width: 500px; height: auto;" />
 </div>
+<div style="background-color: #ff6600; min-height: 100vh;">
+  <h1>Some aliens took over me</h1>
+  <img src="images/aliens.jpg" style="max-width: 600px;" />
+</div>
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h4>Some aliens came out of a ship. They were going to take over me too. But they were too busy arguing.</h4>
+  <img src="images/aliens2.jpg" style="max-width: 600px" />
+</div>
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>When I was asleep some flashing lights awoke me. Then they crashed. Three aliens came to town. I was so scared that I ran away.</h2>
+  <img src="images/space.jpg" style="max-width: 800px;" />
+</div>
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>There was some gas aliens that got me but they told me that there's some more aliens coming that were gold gas aliens. They were going to take over my body. There were two gas aliens.</h2><br> 
+  <img src="images/scary-aliens.jpg" style="" />
+</div>
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>I saw two golden gas aliens. They were with poisionous unknown gas. The other gas aliens were gold. There were two of them.</h2>
+<img src="images/scary-gold-aliens.jpg" />
+</div>
 
 
 </body>
