--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       font-size: 100px;
       margin: 0;
     }
+    h2 {
+      margin: 0 0 20px 0;
+    }
   </style>
 </head>
 <body style="height: 100vh;background: darkred url()">
@@ -91,11 +94,11 @@ Kids. Can you see that Batman logo? It's sooo cool.
 </table>
 
 <div style="background: #f95922; display: block; width: 100%; min-height: 1000px;position: relative;">
-  <h1>Of all these times, it's me, Oscar, making this website > </h1>
+  <h1 style="display: none;">Of all these times, it's me, Oscar, making this website > </h1>
   <br><br><br>
   <img src="images/orange.jpg" style="width: 300px;height: auto;display: block;margin: 0 auto;" />
   <br><br><br><br>
-  <h1>Orange and orange are the same words, but except, there's the orange that you eat and the orange color. I used the orange background for my website.</h1>
+  <h1>Orange and orange are the same words, but except, there's the orange that you eat and the orange color.</h1>
 
 </div>
 
@@ -107,7 +110,6 @@ This website is for my dads website building company but he said he saw too many
 <h1>BB8 is my favourite character from the force awakens and I'm gonna show you a video of BB8 and here's what BB8 looks like. Good Luck. This is a video of BB8 and R2D2. </h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IW5WsLUu77o" frameborder="0" allowfullscreen></iframe>
 
-<h1>The end</h1>
 </div>
 
 
@@ -164,7 +166,17 @@ This website is for my dads website building company but he said he saw too many
 </div>
 <div style="min-height: 100vh; background-color: #ff6600;">
   <h2>I saw two golden gas aliens. They were with poisionous unknown gas. The other gas aliens were gold. There were two of them.</h2>
-<img src="images/scary-gold-aliens.jpg" />
+  <img src="images/scary-gold-aliens.jpg" />
+</div>
+
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>One morning, I saw a squid monster in the sky. It was so scary. It got a laser beam on it's eye and it was all orange. And, it had one eye.</h2>
+  <img src="images/squid-monster.jpg" />
+</div>
+
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h1>A monster attacked me.</h1>
+  <img src="images/real-life-monster.jpg" />
 </div>
 
 
