--- a/index.html
+++ b/index.html
@@ -180,5 +180,16 @@ This website is for my dads website building company but he said he saw too many
 </div>
 
 
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>A robot monster attacked me. It was so scary that I jumped up. It had purple spots all over it and it was all black. It had suckers. </h2>
+  <img src="images/robot-monster.jpg" />
+</div>
+
+
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h1>My apple turned into a monster.</h1>
+  <img style="max-width: 500px;" src="images/apple_monster.jpg" />
+</div>
+
 </body>
 </html>
