--- a/index.html
+++ b/index.html
@@ -191,5 +191,15 @@ This website is for my dads website building company but he said he saw too many
   <img style="max-width: 500px;" src="images/apple_monster.jpg" />
 </div>
 
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>When I was on TV an evil apple showed up on the TV. It was amazing. It said something I don't know. But it must be serious.</h2>
+  <img src="images/apple-monster-2.jpg" style="max-width: 500px;" />
+</div>
+
+<div style="min-height: 100vh; background-color: #ff6600;">
+  <h2>Once there was two brothers that then became a monster because they were combined.</h2>
+  <img src="images/monster.jpg" style="max-width: 500px;" />
+</div>
+
 </body>
 </html>
